# house-price-prediction-v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1_data_exploration.ipynb  2_preparation_engineering_modelling_evaluation-Copy1.ipynb  2_preparation_engineering_modelling_evaluation.ipynb
